--- a/src/styles/visualizer.scss
+++ b/src/styles/visualizer.scss
@@ -13,6 +13,7 @@ h1 {
 }
 
 .controls {
+  z-index: 2;
   padding: 1rem;
   text-align: left;
   position: absolute;
@@ -22,8 +23,18 @@ h1 {
   color: white;
   font-weight: bold;
   width: 200px;
-  height: 100px;
 }
+
+.canvas {
+  z-index: 1;
+  opacity: 0;
+  
+  &.loaded {
+    opacity: 1;
+    transition: opacity 1s ease-in;
+  }
+}
+
 
 .hidden {
   display: none;
